--- a/app/src/main/res/xml/preferences_filter.xml
+++ b/app/src/main/res/xml/preferences_filter.xml
@@ -27,7 +27,7 @@
         app:title="@string/pref_filter_google_title" />
 
     <SwitchPreferenceCompat
-        app:defaultValue="true"
+        app:defaultValue="false"
         app:key="PREFERENCE_FILTER_F_DROID"
         app:summary="@string/pref_filter_fdroid_summary"
         app:title="@string/pref_filter_fdroid_title" />
